--- a/src/App.css
+++ b/src/App.css
@@ -34,4 +34,4 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   flex-direction: column;
   align-items: center;
-}/*# sourceMappingURL=app.css.map */
+}/*# sourceMappingURL=App.css.map */
