--- a/src/components/catalogue-page/catalogue-page.css
+++ b/src/components/catalogue-page/catalogue-page.css
@@ -5,12 +5,20 @@
   gap: 20px;
 }
 
+.search-and-titles {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .filters-wraper {
-  height: 680px;
+  height: 750px;
   background-color: rgba(6, 75, 140, 0.8);
   width: 300px;
   border-radius: 6px;
   grid-column: 1/2;
+  position: sticky;
+  left: 0;
+  top: 75px;
 }
 
 .filter-header {
@@ -151,6 +159,7 @@
   display: flex;
   gap: 20px;
   padding: 0 20px 0 20px;
+  min-height: 700px;
 }
 
 .filter-span {
@@ -173,15 +182,6 @@
   margin-bottom: 10px;
 }
 
-.slider-line {
-  width: 95%;
-  height: 4px;
-  border-radius: 6px;
-  background-color: #3ce3e8;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .slider-pips {
   display: flex;
   width: 92%;
@@ -200,10 +200,26 @@
   background-color: #fff;
 }
 
-.slider-track-0 {
+.slider-line {
   top: -5px;
   width: 100%;
   height: 5px;
+  width: 95%;
+  height: 4px;
+  border-radius: 6px;
+  background-color: #3ce3e8;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.slider-track-0,
+.slider-track-2 {
+  position: relative;
+  bottom: 0;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  height: 4px;
 }
 
 .slider-thumb {
@@ -228,4 +244,19 @@
   background-size: 40px;
   border-radius: 3px;
   padding: 2px;
+}
+
+.catalogue-search {
+  width: 1280px;
+  background-color: rgba(6, 75, 140, 0.8);
+  margin-bottom: 10px;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.catalogue-search .input-title {
+  width: 1200px;
+  border-bottom: none;
+  outline: none;
 }/*# sourceMappingURL=catalogue-page.css.map */
