--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,7 @@
 .header {
-  margin-top: 40px;
+  margin-top: 25px;
   width: 100%;
-  height: 70px;
+  height: 60px;
   color: white;
   display: flex;
   border-top: 2px solid #3ce3e8;
@@ -10,6 +10,9 @@
   font-family: "Inter", sans-serif;
   justify-content: center;
   gap: 25px;
+  top: 0;
+  z-index: 100000;
+  transition: border 0s, all 0.5s ease-in-out;
   margin-bottom: 40px;
 }
 .header a {
@@ -23,6 +26,45 @@
   color: #0e1df3;
 }
 
+.nav-buttons {
+  height: 100%;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: flex;
+}
+.nav-buttons a {
+  display: inline-flex;
+  height: 100%;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  transition: 0.3s;
+}
+.nav-buttons a:hover {
+  background-color: #3ce3e8;
+  color: #000000;
+}
+
+.off-screen-fixed {
+  position: sticky;
+  top: 0;
+  background-color: rgba(6, 75, 140, 0.9);
+  border-top: none;
+  height: 50px;
+}
+.off-screen-fixed .logo {
+  height: 45px;
+}
+.off-screen-fixed .logo .logo-img {
+  height: 45px;
+  width: 45px;
+}
+.off-screen-fixed .logo::before {
+  top: 5px;
+}
+
 .header-mobile-menu {
   display: none;
 }
@@ -32,6 +74,7 @@
   width: max-content;
   height: 70px;
   display: flex;
+  transition: 0.3s;
 }
 
 .logo::before {
@@ -42,6 +85,7 @@
   border-radius: 3px;
   position: relative;
   top: 18px;
+  transition: 0.3s;
 }
 
 .img-background {
