profile start done with catalogue for now

--- a/src/components/catalogue-page/catalogue-page.css
+++ b/src/components/catalogue-page/catalogue-page.css
@@ -11,7 +11,7 @@
 }
 
 .filters-wraper {
-  height: 750px;
+  height: 550px;
   background-color: rgba(6, 75, 140, 0.8);
   width: 300px;
   border-radius: 6px;
@@ -35,7 +35,15 @@
 
 .filter-wraper {
   height: 75px;
-  margin-bottom: 20px;
+  margin-bottom: 35px;
+}
+
+.filter-label {
+  font-size: 20xp;
+  margin-left: auto;
+  margin-right: auto;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .filter {
@@ -96,7 +104,7 @@
   padding-left: 5px;
   color: white;
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
-  height: 40px;
+  height: 120px;
   margin-bottom: 10px;
 }
 
@@ -120,6 +128,7 @@
   background-color: inherit;
   border: none;
   color: white;
+  cursor: pointer;
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
 }
 .filter-option .option-checkbox {
@@ -146,6 +155,9 @@
   bottom: 2px;
   left: 2px;
 }
+.filter-option .filter-desc {
+  display: inline-block;
+}
 
 .filter-option:hover {
   background-color: #021e38;
@@ -159,7 +171,7 @@
   display: flex;
   gap: 20px;
   padding: 0 20px 0 20px;
-  min-height: 700px;
+  min-height: 1500px;
 }
 
 .filter-span {
@@ -180,6 +192,32 @@
 
 .filter-slider {
   margin-bottom: 10px;
+}
+
+.filter-button-wraper {
+  width: 100%;
+  height: 75px;
+  border-top: 2px solid #3ce3e8;
+  margin-top: auto;
+  margin-top: 35px;
+  padding-top: 11px;
+  padding-left: 50px;
+}
+.filter-button-wraper .filter-button {
+  font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+  font-weight: 400;
+  width: 200px;
+  height: 50px;
+  background-color: #3ce3e8;
+  color: black;
+  font-size: 25px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.filter-button-wraper .filter-button:hover {
+  background-color: #39f3fa;
 }
 
 .slider-pips {
@@ -233,6 +271,11 @@
   border-radius: 2px;
   top: -18px;
   border: 1px solid #3ce3e8;
+  cursor: grab;
+}
+
+.slider-thumb:focus {
+  cursor: grabbing;
 }
 
 .thumb-content {
