--- a/src/components/title-page/title-page.css
+++ b/src/components/title-page/title-page.css
@@ -102,7 +102,7 @@
   transition: 0.3s;
 }
 .title-info .select-wrapper .option:hover {
-  background-color: #064b8c;
+  background-color: #05315a;
 }
 .title-info .select-options {
   overflow: hidden;
