--- a/src/components/title-page/title-page.scss
+++ b/src/components/title-page/title-page.scss
@@ -90,7 +90,7 @@
       transition: 0.3s;
     }
     .option:hover {
-      background-color: #064b8c;
+      background-color: #05315a;
     }
   }
   .select-options {
