--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -25,7 +25,8 @@
 
   margin-bottom: 40px;
   .active {
-    color: #0e1df3;
+    background-color: #3ce3e8;
+    color: #000000;
   }
 }
 .nav-buttons {
@@ -53,9 +54,13 @@
   background-color: rgba(6, 75, 140, 0.9);
   border-top: none;
   height: 50px;
+  .img-background {
+    scale: 1.1;
+  }
   .logo {
     height: 45px;
     .logo-img {
+      scale: 0.9;
       height: 45px;
       width: 45px;
     }
@@ -136,8 +141,23 @@
 }
 .aunth-buttons {
   margin-left: 10px;
+  height: 100%;
+  width: fit-content;
+  display: flex;
   a {
+    display: inline-flex;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    transition: 0.3s;
     margin-left: 20px;
+  }
+  a:hover {
+    background-color: #3ce3e8;
+    color: #000000;
   }
 }
 @media (max-width: 1100px) {
