--- a/src/components/profile-page/profile-page.scss
+++ b/src/components/profile-page/profile-page.scss
@@ -1,7 +1,7 @@
 .profile {
   width: 65vw;
   height: fit-content;
-  min-height: 680px;
+  min-height: 694px;
 }
 .profile-header {
   width: 100%;
@@ -10,7 +10,7 @@
   .tab-profile {
     display: inline-flex;
     width: 150px;
-    height: 48px;
+    height: 50px;
     padding-top: 15px;
     background-color: rgba(6, 75, 140, 0.95);
     margin-left: 20px;
@@ -25,14 +25,26 @@
     transform: translateY(3px);
     border-radius: 2px;
     transition: 0.4s;
-    animation-direction: alternate;
   }
 }
-.profile-main {
+.profile-main,
+.profile-lsit {
   background-color: rgba(5, 49, 90, 0.6);
-  height: 300px;
+  height: 640px;
   border-bottom: 1px solid #3ce3e8;
   border-left: 1px solid #3ce3e8;
   border-right: 1px solid #3ce3e8;
   border-top: 3px solid #3ce3e8;
+}
+.profile-main {
+  padding: 10px;
+  display: flex;
+  .profile-picture {
+    width: 90px;
+    max-height: 125px;
+  }
+  .profile-info {
+    display: flex;
+    flex-direction: column;
+  }
 }
