--- a/src/components/main-page/main-page.css
+++ b/src/components/main-page/main-page.css
@@ -55,20 +55,43 @@
 }
 
 @media (max-width: 1100px) {
+  .season-anime {
+    height: 900px;
+    width: 100%;
+  }
+  .season-anime .season-anime-title {
+    margin-left: 30px;
+  }
   .season-titles {
     flex-direction: column;
     flex-wrap: nowrap;
   }
   .season-titles {
-    height: 720px;
+    height: 780px;
     overflow: hidden;
+    align-items: center;
+    width: 100%;
+    padding: 0;
+    padding-top: 5px;
+    padding-left: 5px;
+    background: none;
+    gap: 5px;
   }
   .season-titles .title-main {
-    width: 340px;
+    width: 75vw;
     height: 125px;
   }
   .season-titles .title-main .poster {
     width: 100px;
     height: 125px;
+  }
+  .recently-added-anime {
+    width: 100%;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  .recently-added-titles {
+    row-gap: 60px;
+    margin-top: 30px;
   }
 }/*# sourceMappingURL=main-page.css.map */
