--- a/src/components/title/title.css
+++ b/src/components/title/title.css
@@ -32,16 +32,14 @@
   padding: 6px;
   font-size: 12px;
   color: black;
-  position: relative;
   top: 23px;
   left: 0.5px;
 }
 .title-main .age-rest {
   padding: 5px;
-  position: relative;
-  top: 293px;
-  left: 112.5px;
   color: black;
+  left: 162px;
+  bottom: 28px;
 }
 
 .title-main:hover {
@@ -61,4 +59,97 @@
   left: 65px;
   filter: brightness(130%);
   z-index: 2;
+}
+
+.title-poster-wraper {
+  height: 325px;
+}
+
+.title-type,
+.title-year {
+  display: none;
+}
+
+.title-episodes {
+  position: relative;
+  font-size: 14px !important;
+  bottom: 47px;
+  left: 102px;
+}
+
+@media (max-width: 1100px) {
+  .title-main {
+    display: flex;
+    background-color: rgba(6, 75, 140, 0.8);
+  }
+  .title-main .title-poster-wraper {
+    width: 100px;
+    height: 125px;
+    display: flex;
+    margin-right: 10px;
+  }
+  .title-main .poster {
+    width: 100px;
+    height: 125px;
+    position: absolute;
+    width: -moz-min-content;
+    width: min-content;
+  }
+  .title-main .status {
+    top: 0;
+    bottom: 0;
+    width: 30px;
+    height: 15px;
+    font-size: 8px;
+    padding: 0;
+    padding-top: 3px;
+    padding-left: 3px;
+  }
+  .title-main .age-rest {
+    display: none;
+  }
+  .title-main .name {
+    font-size: 20px;
+    max-width: 220px;
+    font-weight: 700;
+    max-height: 55px;
+  }
+  .title-name-tags {
+    padding-top: 15px;
+  }
+  .title-episodes {
+    top: 20px;
+  }
+  .recently-added {
+    width: 155px;
+    height: 240px;
+    display: flex;
+    flex-direction: column;
+  }
+  .recently-added .title-poster-wraper {
+    width: 100%;
+    height: 100%;
+  }
+  .recently-added .title-poster-wraper .poster {
+    position: relative;
+    right: 26px;
+    width: 100%;
+    max-width: 155px;
+    height: 100%;
+    max-height: 240px;
+  }
+  .recently-added .title-name-tags {
+    padding-top: 0;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  .recently-added .title-name-tags .tags {
+    display: none;
+  }
+  .recently-added .title-name-tags .name {
+    width: 100%;
+  }
+  .recently-added .title-name-tags .title-episodes {
+    display: none;
+  }
 }/*# sourceMappingURL=title.css.map */
