--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -31,16 +31,14 @@
     padding: 6px;
     font-size: 12px;
     color: black;
-    position: relative;
     top: 23px;
     left: 0.5px;
   }
   .age-rest {
     padding: 5px;
-    position: relative;
-    top: 293px;
-    left: 112.5px;
     color: black;
+    left: 162px;
+    bottom: 28px;
   }
 }
 .title-main:hover {
@@ -59,4 +57,91 @@
   left: 65px;
   filter: brightness(130%);
   z-index: 2;
+}
+.title-poster-wraper {
+  height: 325px;
+}
+.title-type,
+.title-year {
+  display: none;
+}
+.title-episodes {
+  position: relative;
+  font-size: 14px !important;
+  bottom: 47px;
+  left: 102px;
+}
+@media (max-width: 1100px) {
+  .title-main {
+    display: flex;
+    background-color: rgba(6, 75, 140, 0.8);
+    .title-poster-wraper {
+      width: 100px;
+      height: 125px;
+      display: flex;
+      margin-right: 10px;
+    }
+    .poster {
+      width: 100px;
+      height: 125px;
+      position: absolute;
+      width: min-content;
+    }
+    .status {
+      top: 0;
+      bottom: 0;
+      width: 30px;
+      height: 15px;
+      font-size: 8px;
+      padding: 0;
+      padding-top: 3px;
+      padding-left: 3px;
+    }
+    .age-rest {
+      display: none;
+    }
+    .name {
+      font-size: 20px;
+      max-width: 220px;
+      font-weight: 700;
+      max-height: 55px;
+    }
+  }
+  .title-name-tags {
+    padding-top: 15px;
+  }
+  .title-episodes {
+    top: 20px;
+  }
+  .recently-added {
+    width: 155px;
+    height: 240px;
+    display: flex;
+    flex-direction: column;
+    .title-poster-wraper {
+      width: 100%;
+      height: 100%;
+      .poster {
+        position: relative;
+        right: 26px;
+        width: 100%;
+        max-width: 155px;
+        height: 100%;
+        max-height: 240px;
+      }
+    }
+    .title-name-tags {
+      padding-top: 0;
+      height: fit-content;
+      .tags {
+        display: none;
+      }
+      .name {
+        width: 100%;
+      }
+      .title-episodes {
+        display: none;
+      }
+    }
+  }
 }
