--- a/src/app.scss
+++ b/src/app.scss
@@ -33,5 +33,6 @@ body::-webkit-scrollbar-thumb {
     sans-serif;
   display: flex;
   flex-direction: column;
+  min-height: 975px;
   align-items: center;
 }
