--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -11,6 +11,8 @@
   flex-direction: column;
   align-items: center;
   padding: 20px 10px;
+  margin-top: auto;
+  flex: 0;
 }
 .footer-links {
   .link {
