--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -27,6 +27,10 @@
   color: #000000;
 }
 
+.header-mobile-button {
+  display: none;
+}
+
 .nav-buttons {
   height: 100%;
   width: -moz-fit-content;
@@ -192,5 +196,10 @@
   .aunth-buttons,
   .header-profile {
     display: none;
+  }
+  .mobile-menu {
+    position: relative;
+    width: 100px;
+    height: 100px;
   }
 }/*# sourceMappingURL=header.css.map */
