--- a/src/components/signup-page/signupPage.scss
+++ b/src/components/signup-page/signupPage.scss
@@ -42,3 +42,14 @@
     cursor: pointer;
   }
 }
+.form-title {
+  margin-bottom: 30px;
+  margin-top: 10px;
+}
+.input-wrapper {
+  margin-bottom: 15px;
+}
+.error-message-input {
+  color: rgb(243, 38, 38);
+  margin-top: 10px;
+}
