--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -175,6 +175,15 @@
     background: rgba(86, 86, 86, 0.6);
     border: none;
     outline: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 7px;
+    img {
+      position: relative;
+      bottom: 6px;
+      left: 5px;
+    }
   }
   .input-title,
   .nav-buttons,
@@ -184,7 +193,11 @@
   }
   .mobile-menu {
     position: relative;
-    width: 100px;
-    height: 100px;
+  }
+  .line-burger {
+    width: 32px;
+    height: 3px;
+    background-color: #3ce3e8;
+    border-radius: 2px;
   }
 }
