--- a/src/components/profile-page/profile-page.scss
+++ b/src/components/profile-page/profile-page.scss
@@ -1,5 +1,7 @@
 .profile {
   width: 65vw;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   min-height: 694px;
 }
