--- a/src/app.scss
+++ b/src/app.scss
@@ -8,9 +8,14 @@ body {
   width: 100%;
   height: 100%;
   align-items: center;
-  background: url("./components/img/i-am-here-anime-pn-3840x2400.jpg") no-repeat
-    fixed;
+  background: url("./components/img/i-am-here-anime-pn-3840x2400.jpg") fixed;
   background-size: cover;
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+  background-position: center;
+  background-size: cover;
+  background-color: #2179df;
 }
 body::-webkit-scrollbar {
   width: 10px; /* ширина scrollbar */
