--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ body {
   background-position: center;
   background-size: cover;
   background-color: #2179df;
+  transition: 1s;
 }
 
 body::-webkit-scrollbar {
@@ -39,6 +40,11 @@ body::-webkit-scrollbar-thumb {
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
   display: flex;
   flex-direction: column;
-  min-height: 975px;
   align-items: center;
+}
+
+@media (min-width: 1100px) {
+  .okami {
+    min-height: 975px;
+  }
 }/*# sourceMappingURL=App.css.map */
