--- a/src/components/signup-page/signupPage.scss
+++ b/src/components/signup-page/signupPage.scss
@@ -4,9 +4,9 @@
   flex-grow: 1;
   justify-content: center;
   flex-direction: column;
+  width: 24vw;
 }
 .signup-form {
-  width: 500px;
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -54,4 +54,9 @@
 .error-message-input {
   color: rgb(243, 38, 38);
   margin-top: 10px;
+}
+@media (max-width: 1100px) {
+  .signup {
+    width: 95vw;
+  }
 }
