--- a/src/components/header/mobile-meu/mobileMenu.css
+++ b/src/components/header/mobile-meu/mobileMenu.css
@@ -49,7 +49,7 @@
 }
 
 .mobile-menu-wrapper.hide {
-  position: absolute;
+  position: fixed;
   transform: translateX(-2000px);
   transition: 2s;
 }
@@ -78,7 +78,7 @@
   gap: 5px;
   align-items: center;
 }
-.menu-navigation button {
+.menu-navigation .menu-navigation-button {
   border: 1px solid #3ce3e8;
   background-color: #05315a;
   height: 50px;
@@ -88,5 +88,9 @@
   width: 80%;
   cursor: pointer;
   transition: 0.3s;
-  font-size: 18px;
+  font-size: 24px;
+  text-align: center;
+  padding-top: 8px;
+  font-style: normal;
+  text-decoration: none;
 }/*# sourceMappingURL=mobileMenu.css.map */
