--- a/src/components/header/mobile-meu/mobileMenu.css
+++ b/src/components/header/mobile-meu/mobileMenu.css
@@ -93,4 +93,7 @@
   padding-top: 8px;
   font-style: normal;
   text-decoration: none;
+}
+.menu-auth-link {
+  color: white;
 }/*# sourceMappingURL=mobileMenu.css.map */
