--- a/src/components/header/mobile-meu/mobileMenu.scss
+++ b/src/components/header/mobile-meu/mobileMenu.scss
@@ -97,4 +97,10 @@
     font-style: normal;
     text-decoration: none;
   }
+  .menu-navigation-button.active{
+    
+  }
+}
+.menu-auth-link {
+  color: white;
 }
