--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
   height: 100%;
   align-items: center;
-  background: url("./components/img/i-am-here-anime-pn-3840x2400.jpg") fixed;
+  background: url("./components/img/bacground19201080.webp") fixed;
   background-size: cover;
   top: 0px;
   left: 0px;
