--- a/src/components/title-page/title-page.css
+++ b/src/components/title-page/title-page.css
@@ -1,7 +1,3 @@
-:root {
-  --element-count: var(--element-count);
-}
-
 *::-webkit-scrollbar {
   width: 5px;
 }
@@ -17,7 +13,6 @@
 }
 
 .title {
-  width: 1300px;
   margin-left: auto;
   margin-right: auto;
   background: rgba(5, 49, 90, 0.6);
@@ -446,4 +441,26 @@
 
 .comments .comment:nth-child(2n) {
   background-color: #05315a;
+}
+
+@media (max-width: 1100px) {
+  .title-info {
+    display: block;
+  }
+  .title-info .title-poster {
+    width: 90vw;
+    height: 90vw;
+  }
+  .title-info .title-text-info {
+    width: 90vw;
+  }
+  .player-wraper {
+    width: 90vw;
+  }
+  .player-wraper .title-header {
+    width: 80vw;
+  }
+  .player-wraper .player {
+    width: 80vw;
+  }
 }/*# sourceMappingURL=title-page.css.map */
