--- a/src/components/title-page/title-page.scss
+++ b/src/components/title-page/title-page.scss
@@ -1,6 +1,3 @@
-:root {
-  --element-count: var(--element-count);
-}
 *::-webkit-scrollbar {
   width: 5px;
 }
@@ -13,7 +10,6 @@
   border-radius: 20px;
 }
 .title {
-  width: 1300px;
   margin-left: auto;
   margin-right: auto;
   background: rgba(5, 49, 90, 0.6);
@@ -426,4 +422,25 @@
 }
 .comments .comment:nth-child(2n) {
   background-color: #05315a;
+}
+@media (max-width: 1100px) {
+  .title-info {
+    display: block;
+    .title-poster {
+      width: 90vw;
+      height: 90vw;
+    }
+    .title-text-info {
+      width: 90vw;
+    }
+  }
+  .player-wraper {
+    width: 90vw;
+    .title-header {
+      width: 80vw;
+    }
+    .player {
+      width: 80vw;
+    }
+  }
 }
