--- a/src/components/title-page/title-page.css
+++ b/src/components/title-page/title-page.css
@@ -444,6 +444,12 @@
 }
 
 @media (max-width: 1100px) {
+  .poster-wraper {
+    align-items: center;
+  }
+  .title-header {
+    width: 90vw;
+  }
   .title-info {
     display: block;
   }
@@ -454,13 +460,43 @@
   .title-info .title-text-info {
     width: 90vw;
   }
+  .comments-wraper {
+    width: 90vw;
+  }
+  .comments-styles,
+  .comment-input {
+    width: 90vw;
+  }
+  .devider-line-long {
+    width: 80vw;
+  }
+  .comments {
+    width: 90vw;
+  }
+  .comments .comment {
+    width: 85vw;
+  }
   .player-wraper {
     width: 90vw;
   }
-  .player-wraper .title-header {
-    width: 80vw;
-  }
   .player-wraper .player {
-    width: 80vw;
+    width: 90vw;
+    height: 50vh;
+  }
+  .player-wraper .title-header {
+    width: 90vw;
+  }
+  .player-wraper .title-header .just-player {
+    width: 18vw;
+  }
+  .player-wraper .title-header .header-tab {
+    width: 30vw;
+  }
+  .player-wraper .title-header .player-chose-wraper,
+  .player-wraper .title-header .dub-chose-wraper {
+    width: 30vw;
+  }
+  .comment-send {
+    margin-left: 30%;
   }
 }/*# sourceMappingURL=title-page.css.map */
