--- a/src/components/catalogue-page/catalogue-page.css
+++ b/src/components/catalogue-page/catalogue-page.css
@@ -303,6 +303,10 @@
   outline: none;
 }
 
+.mobile-button-filter {
+  display: none;
+}
+
 @media (max-width: 1100px) {
   .catalogue-page {
     display: block;
@@ -333,5 +337,15 @@
   }
   .catalogue-page .input-title {
     display: block;
+  }
+  .mobile-button-filter {
+    display: block;
+    width: 90vw;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    background-color: #05315a;
+    height: 50px;
+    margin-bottom: 10px;
   }
 }/*# sourceMappingURL=catalogue-page.css.map */
