--- a/src/components/title-page/title-page.scss
+++ b/src/components/title-page/title-page.scss
@@ -424,6 +424,12 @@
   background-color: #05315a;
 }
 @media (max-width: 1100px) {
+  .poster-wraper {
+    align-items: center;
+  }
+  .title-header {
+    width: 90vw;
+  }
   .title-info {
     display: block;
     .title-poster {
@@ -434,13 +440,44 @@
       width: 90vw;
     }
   }
+
+  .comments-wraper {
+    width: 90vw;
+  }
+  .comments-styles,
+  .comment-input {
+    width: 90vw;
+  }
+  .devider-line-long {
+    width: 80vw;
+  }
+  .comments {
+    width: 90vw;
+    .comment {
+      width: 85vw;
+    }
+  }
   .player-wraper {
     width: 90vw;
-    .title-header {
-      width: 80vw;
-    }
     .player {
-      width: 80vw;
+      width: 90vw;
+      height: 50vh;
     }
+    .title-header {
+      width: 90vw;
+      .just-player {
+        width: 18vw;
+      }
+      .header-tab {
+        width: 30vw;
+      }
+      .player-chose-wraper,
+      .dub-chose-wraper {
+        width: 30vw;
+      }
+    }
+  }
+  .comment-send {
+    margin-left: 30%;
   }
 }
