--- a/src/components/catalogue-page/catalogue-page.css
+++ b/src/components/catalogue-page/catalogue-page.css
@@ -308,6 +308,19 @@
 }
 
 @media (max-width: 1100px) {
+  body .filters-wraper {
+    position: absolute;
+  }
+  body .filters-wraper.closed {
+    display: none;
+  }
+  body .filters-wraper.open {
+    display: block;
+    position: fixed;
+    z-index: 1000000;
+    left: 60px;
+    top: 130px;
+  }
   .catalogue-page {
     display: block;
   }
@@ -321,13 +334,6 @@
   }
   .catalogue-page .search-and-titles {
     width: 90vw;
-  }
-  .catalogue-page .filters-wraper.closed {
-    display: none;
-    position: absolute;
-  }
-  .catalogue-page .filters-wraper.open {
-    display: block;
   }
   .catalogue-page .titles-wraper {
     width: 90vw;
@@ -350,5 +356,14 @@
     background-color: #05315a;
     height: 50px;
     margin-bottom: 10px;
+  }
+  .background {
+    width: 1000px;
+    height: 1000px;
+    background-color: #05315a;
+    position: fixed;
+    top: 0;
+    z-index: 100000;
+    opacity: 0.7;
   }
 }/*# sourceMappingURL=catalogue-page.css.map */
