--- a/src/components/signup-page/signupPage.scss
+++ b/src/components/signup-page/signupPage.scss
@@ -16,7 +16,7 @@
   height: -moz-fit-content;
   height: fit-content;
   min-height: 500px;
-  input {
+  .form-input {
     background-color: #05315a;
     border: 1px solid #3ce3e8;
     width: 330px;
