added lazy loading of components and chet

--- a/src/app.scss
+++ b/src/app.scss
@@ -41,6 +41,25 @@ body::-webkit-scrollbar-thumb {
   flex-direction: column;
   align-items: center;
 }
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loading-fallback {
+  width: 50px;
+  height: 50px;
+  border: 10px solid #f3f3f3; /* Light grey */
+  border-top: 10px solid #2179df; /* Black */
+  border-radius: 50%;
+  animation: spinner 1.5s linear infinite;
+  position: absolute;
+  top: 50%;
+}
 @media (min-width: 1100px) {
   .okami {
     min-height: 975px;
