--- a/src/components/catalogue-page/catalogue-page.css
+++ b/src/components/catalogue-page/catalogue-page.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .catalogue-page {
   min-height: 680px;
   display: grid;
@@ -124,14 +125,30 @@
   align-items: flex-start;
   padding-left: 5px;
   padding-right: 5px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.filter-list::-webkit-scrollbar {
+  width: 5px; /* ширина scrollbar */
+  padding-right: 10px;
+}
+
+.filter-list::-webkit-scrollbar-track {
+  width: 10px;
+  background: #05315a;
+}
+
+.filter-list::-webkit-scrollbar-thumb {
+  background-color: #2179df; /* цвет плашки */
+  border-radius: 20px; /* закругления плашки */
 }
 
 .filter-option {
   display: inline-flex;
   width: 100%;
-  height: 35px;
-  font-size: 16px;
+  height: 50px;
+  font-size: 17px;
   align-items: center;
   padding-left: 5px;
   background-color: inherit;
