--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -2,6 +2,8 @@
   height: 340px;
   width: 190px;
   transition: 0.5s;
+  height: 350px;
+  margin-top: 20px;
   span {
     font-size: 10px;
   }
@@ -10,6 +12,7 @@
     z-index: 1;
     position: relative;
     transition: 0.3s;
+    width: 190px;
   }
   .name {
     display: inline-block;
@@ -24,21 +27,14 @@
   .status,
   .age-rest {
     background-color: #3ce3e8;
-    position: relative;
-    z-index: 2;
-  }
-  .status {
-    padding: 6px;
-    font-size: 12px;
+    position: absolute;
+    z-index: 1000;
     color: black;
-    top: 25px;
-    left: -1px;
+    padding: 4px;
+    font-size: 14px;
   }
   .age-rest {
-    padding: 5px;
-    color: black;
-    left: 162px;
-    bottom: 28px;
+    align-self: flex-end;
   }
 }
 .title-main:hover {
@@ -61,7 +57,10 @@
   z-index: 2;
 }
 .title-poster-wraper {
-  height: 325px;
+  height: 290px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
 }
 .title-type,
 .title-year {
@@ -92,14 +91,8 @@
       width: min-content;
     }
     .status {
-      top: 0;
-      bottom: 0;
-      width: 30px;
-      height: 15px;
-      font-size: 8px;
-      padding: 0;
-      padding-top: 3px;
-      padding-left: 3px;
+      font-size: 12px;
+      padding: 3px;
     }
     .age-rest {
       display: none;
